test/tests/stages/8_loops/valid/for_absent_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(400)
  ;
  ;
  identifier(i)
  =
  identifier(i)
  -
  const int(100)
  )
  if
  (
  identifier(i)
  ==
  const int(100)
  )
  return
  const int(0)
  ;
  }
