test/tests/stages/8_loops/invalid_parse/missing_for_header_clause.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  )
  ;
  return
  const int(0)
  ;
  }
